tests/errors/debug.trace-vm.art
got: execute "arturo -d --no-color tests/errors/trace-vm.art"
print got